# WkCore

./: .travis.yml  Android.mk  BUILDING.md  CMakeLists.txt  CODING.md  Doxyfile.wk  LICENSE  LICENSE.md  README.md  WkBuild.cmake  WkInstall.cmake  WkPlatform.c.config  WkPlatform.cmake  WkTest.cmake  WkUtils.cmake  build.bat  build.sh  easy_build.sh
CMake/: README.md  README.txt  WkCompilerSetup.cmake  WkDepends.cmake  WkPack.cmake
Modules/: FindGuichan.cmake  FindLuaJIT.cmake  FindMySQL++.cmake  FindMySql.cmake  FindWKCMAKE_AStyle.cmake  FindWKCMAKE_Cppcheck.cmake  FindWkFLTK.cmake
Utils/astyle/doc/: index.html  license.html  links.html  news.html  scripts.html
Utils/astyle/src/: ASResource.cpp
doc/: Core.xml  WkCMake.txt  adv_tutorial.txt  gen-docutils.sh  gen_website.cmd  gen_website.sh  index.txt  install-docutils.sh  test-docutils.sh  tutorial.txt
include/: Adapter.hh  Assert.hh  Callback.hh  Config.hh  Core.hh  CurrentFunction.hh  Distribution.hh  Functor.hh  Logger.hh  Randomizer.hh  StaticAssert.hh  Time.hh  dbgmem.h
include/Core/: NewLogger.hh
include/Core/DateTime/: ChronoDuration.hh
include/Core/Error/: CError.hh  Error.hh  ErrorCategory.hh  ErrorCode.hh  ErrorCondition.hh  GenericError.hh  SystemError.hh
include/Core/Logging/: loglevel.hh  logstream.hh  logstreambuf.hh  nullstream.hh  nullstreambuf.hh
include/Core/Memory/: SharedPtr.hh
include/Core/Numerics/: Ratio.hh
include/Core/Thread/: Atomic.hh  AtomicFlag.hh  ConditionVariable.hh  FastMutex.hh  LockGuard.hh  Mutex.hh  RecursiveMutex.hh  Thread.hh
include/Core/Utils/: ValueInit.hh
src/: Assert.cc  Logger.cc  NewLogger.cc  Randomizer.cpp  Time.cc  dbgmem.c
src/Error/: ErrorCategory.cc  GenericError.cc  GenericErrorCategory.cc  LinuxError.hh  SystemErrorCategory.cc  Win32Error.hh
src/Logging/: loglevel.cc  logstream.cc  logstreambuf.cc  nullstream.cc  nullstreambuf.cc
test/: TestAdapter.cc  TestCallback.cc  TestCommon.hh  TestDbgMem.c  TestError.cc  TestFunctor.cc  TestLogger.cc  TestRandomizer.cc  TestSharedPtr.cc  TestStaticAssert.cc  TestThread.cc  TestTime.cc
tests/: README.txt  TODO.txt
tests/Bullet/: CMakeLists.txt  TOFIX.txt  build.sh
tests/Bullet/src/: source.cc
tests/Bullet/test/: maintest.cc
tests/LuaJIT/: CMakeLists.txt  build.sh
tests/LuaJIT/src/: source.cc
tests/LuaJIT/test/: maintest.cc
tests/MySQL++/: CMakeLists.txt  build.sh
tests/MySQL++/src/: source.cc
tests/MySQL++/test/: maintest.cc
tests/MySql/: CMakeLists.txt  build.sh
tests/MySql/src/: source.cc
tests/MySql/test/: maintest.cc
tests/ProjectA/: CMakeLists.txt  build.sh
tests/ProjectA/CMake/: WkBuild.cmake
tests/ProjectA/include/: header.hh
tests/ProjectB/: CMakeLists.txt  build.sh
tests/ProjectC/: CMakeLists.txt  build.sh
tests/ProjectCsub/: CMakeLists.txt  build.sh
utils/: LICENSE.txt  README.txt  genWKHier.sh
website/: WkCMake.html  adv_tutorial.html  index.html  script_ref.html  tutorial.html
(+41 files in other folders)
